syntax = "proto3";

option go_package = "sigmaos/apps/socialnetwork/proto";

service PostService {
	rpc StorePost(StorePostRequest) returns (StorePostResponse);
	rpc ReadPosts(ReadPostsRequest) returns (ReadPostsResponse);
}

service ComposeService {
	rpc ComposePost(ComposePostRequest) returns (ComposePostResponse);
}

service MediaService {
	rpc StoreMedia(StoreMediaRequest) returns (StoreMediaResponse);
	rpc ReadMedia(ReadMediaRequest) returns (ReadMediaResponse);
}

message StorePostRequest {
	Post post = 1;
}

message StorePostResponse {
	string ok = 1;
}

message ReadPostsRequest {
	repeated int64 postids = 1;	
}

message ReadPostsResponse {
	string ok = 1;
	repeated Post posts = 2;
}

message StoreMediaRequest {
	string mediatype = 1;
	bytes  mediadata = 2;
}

message StoreMediaResponse {
	string ok = 1;
	int64  mediaid = 2;
}

message ReadMediaRequest {
	repeated int64 mediaids = 1;
}

message ReadMediaResponse {
	string          ok = 1;
	repeated string mediatypes = 2;
	repeated bytes  mediadatas = 3;
}

message ComposePostRequest {
	string          username = 1;
	int64           userid = 2;
	string          text = 3;
	POST_TYPE       posttype = 4;
    repeated int64  mediaids = 5;
}

message ComposePostResponse {
	string ok = 1;
}

message Post {
	int64           postid = 1;
	POST_TYPE       posttype = 2;
	int64           timestamp = 3;
	int64           creator = 4;
	string          creatoruname = 5;
	string          text = 6;
	repeated int64  usermentions = 7;
	repeated int64  medias = 8;
	repeated string urls = 9;
}

enum POST_TYPE {
	UNKNOWN = 0;
	POST = 1;
	REPOST = 2;
	REPLY = 3;
	DM = 4;
}
